[package]
name = "pos"
version = "0.1.1"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Reads GNSS/IMU position and accuracy files."
license = "MIT OR Apache-2.0"
documentation = "http://gadomski.github.io/pos-rs"
homepage = "https://github.com/gadomski/pos-rs"
repository = "https://github.com/gadomski/pos-rs"
keywords = ["gis", "gnss", "imu", "sbet"]
exclude = ["data/*"]

[dependencies]
byteorder = "1.2"
failure = "0.1"

[profile.test]
opt-level = 2
